# SolidSight

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ruff.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
aisight/: README.md  pyproject.toml
aisight/aisight/: __init__.py  clean.py  cli.py
aisight/tests/: test_aisight.py
animationsight/: README.md  pyproject.toml
animationsight/.claude-plugin/: plugin.json
animationsight/animationsight/: __init__.py  bvh.py  cli.py  errors.py  metrics.py  render.py  report.py  skill_install.py
animationsight/animationsight/skill_data/: SKILL.md
animationsight/examples/: make_clips.py
animationsight/examples/01-walk/: README.md  walk_broken.bvh  walk_clean.bvh
animationsight/examples/01-walk/out_broken/: com_trajectory.csv  report.json
animationsight/examples/01-walk/out_clean/: com_trajectory.csv  report.json
animationsight/examples/02-jump/: README.md  jump_fixed.bvh  jump_floaty.bvh  make_jump.py
animationsight/examples/02-jump/out_fixed/: com_trajectory.csv  report.json
animationsight/examples/02-jump/out_floaty/: com_trajectory.csv  report.json
animationsight/examples/03-parkour/: README.md  make_after.py  make_blind.py  parkour_after.bvh  parkour_blind.bvh
animationsight/examples/03-parkour/audit_after/: com_trajectory.csv  report.json
animationsight/examples/03-parkour/audit_blind/: com_trajectory.csv  report.json
animationsight/skill/: SKILL.md
animationsight/tests/: test_animationsight.py
docs/: roadmap-sights.md
docs/comparison/: README.md
docs/comparison/blind/: audit.py  engine_blind.py  engine_blind.stl
pcbsight/: README.md  pyproject.toml
pcbsight/.claude-plugin/: plugin.json
pcbsight/examples/: _kicad.py  _router.py  make_boards.py
pcbsight/examples/01-board/: board_broken.kicad_pcb  board_clean.kicad_pcb
pcbsight/examples/01-board/out_broken/: report.json
pcbsight/examples/01-board/out_clean/: report.json
pcbsight/examples/02-rover/: README.md  make_rover.py  rover_blind.kicad_pcb  rover_clean.kicad_pcb
pcbsight/examples/02-rover/out_blind/: report.json
pcbsight/examples/02-rover/out_clean/: report.json
pcbsight/pcbsight/: __init__.py  board.py  checks.py  cli.py  errors.py  render.py  report.py  sexpr.py  skill_install.py
pcbsight/pcbsight/skill_data/: SKILL.md
pcbsight/skill/: SKILL.md
pcbsight/skills/pcbsight/: SKILL.md
pcbsight/tests/: test_pcbsight.py
shadersight/: README.md  pyproject.toml
shadersight/.claude-plugin/: plugin.json
shadersight/examples/02-gold/: README.md
shadersight/examples/02-gold/out_memory/: report.json
shadersight/examples/02-gold/out_preset/: report.json
shadersight/shadersight/: __init__.py  cli.py  preview.py  render.py  skill_install.py
shadersight/shadersight/skill_data/: SKILL.md
shadersight/skill/: SKILL.md
shadersight/tests/: test_shadersight.py
showcase/: README.md
showcase/motion/: gesture_eased.bvh  gesture_stepped.bvh  make_gesture.py  render_gesture.py
showcase/motion/out_eased/: com_trajectory.csv  report.json
showcase/motion/out_fixed/: report.json
showcase/motion/out_floaty/: report.json
showcase/motion/out_stepped/: com_trajectory.csv  report.json
showcase/robot/: model.py  vigia.py
skill/: SKILL.md
skill/domains/: furniture.md  game-ready.md
skill/examples/02-snap-box/: model.py
skill/examples/05-assembly/: model.py  model_collision.py
skill/examples/06-hidden-cavity/: model.py
skill/examples/07-engine-block/: model.py
skill/examples/08-from-image/: README.md  model.py
skill/references/: design-language.md  detail-mode.md  parts-catalog.md  platform.md  report-guide.md
solidsight/: README.md  pyproject.toml
solidsight/.claude-plugin/: plugin.json
solidsight/benchmarks/: README.md
solidsight/benchmarks/01-washer/: expectations.json  prompt.md  reference.py
solidsight/benchmarks/02-vented-box/: expectations.json  prompt.md  reference.py
solidsight/benchmarks/03-gear-pair/: expectations.json  prompt.md  reference.py
solidsight/benchmarks/04-bearing-block/: expectations.json  prompt.md  reference.py
solidsight/skill/: SKILL.md
solidsight/solidsight/: __init__.py  assembly.py  bench.py  bom.py  cli.py  components_db.py  drawings.py  errors.py  explain.py  fits.py  geom.py  plugins.py  render.py  report.py  review.py  runner.py  scene.py  skill_install.py  validate.py  viewer.py  vision.py  watch.py
solidsight/tests/: test_regressions.py  test_vision.py
texturesight/: README.md  pyproject.toml
texturesight/.claude-plugin/: plugin.json
texturesight/examples/: make_assets.py  make_crate.py
texturesight/examples/01-cube/out_broken/: report.json
texturesight/examples/01-cube/out_clean/: report.json
texturesight/examples/01-cube/out_tex/: report.json
texturesight/examples/02-crate/: README.md
texturesight/examples/02-crate/out_fixed/: report.json
texturesight/examples/02-crate/out_starved/: report.json
texturesight/examples/03-crate-hero/: README.md
texturesight/examples/03-crate-hero/audit_after/: report.json
texturesight/examples/03-crate-hero/audit_blind/: report.json
texturesight/skill/: SKILL.md
texturesight/tests/: test_texturesight.py
texturesight/texturesight/: __init__.py  cli.py  errors.py  images.py  obj.py  render.py  report.py  skill_install.py  uv.py
texturesight/texturesight/skill_data/: SKILL.md
tool/: README.md  pyproject.toml
tool/solidsight/: __init__.py  assembly.py  bom.py  cli.py  events.py  geom.py  motion.py  query.py  render.py  report.py  robot.py  runner.py  scene.py  skill_install.py  validate.py  vision.py
tool/solidsight/parts/: __init__.py  enclosures.py  features.py  mechanisms.py  paths.py  patterns.py  threads.py
tool/solidsight/skill_data/: SKILL.md
tool/solidsight/skill_data/domains/: enclosures.md  mechanisms.md  scientific.md  toys.md  vehicles.md
tool/solidsight/skill_data/references/: domains.md  parts-catalog.md  platform.md
tool/solidsight/viewer_assets/: index.html
tool/tests/: test_regressions.py  test_vision.py
(+38 files in other folders)
