[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "texturesight"
version = "0.3.0"
description = "UV and texture review built exclusively for AI agents: a mesh and its maps in, exact measurements + evidence renders out."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "solidsight contributors" }]
keywords = ["texture", "uv", "pbr", "ai-agent", "gamedev"]
dependencies = [
    "numpy>=1.24",
    "pillow>=10.0",
]

[project.scripts]
texturesight = "texturesight.cli:main"

[tool.setuptools.packages.find]
include = ["texturesight*"]

[tool.setuptools.package-data]
texturesight = ["skill_data/SKILL.md"]
