[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "solidsight"
version = "0.5.0"
description = "A 3D design tool built exclusively for AI agents: parametric code in, renders + machine-readable validation reports out."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "solidsight contributors" }]
keywords = ["3d", "cad", "csg", "ai-agent", "parametric", "3d-printing"]
dependencies = [
    "manifold3d>=3.0",
    "trimesh>=4.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pillow>=10.0",
    "matplotlib>=3.7",
]

[project.scripts]
solidsight = "solidsight.cli:main"

[tool.setuptools.packages.find]
include = ["solidsight*"]

[tool.setuptools.package-data]
solidsight = ["skill_data/SKILL.md", "skill_data/references/*.md", "viewer_assets/*"]
